--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
         <div>
           <h4>Languages</h4>
-          <p>🇵🇱 Hindi - Native speaker</p>
-          <p>🇬🇧 English - Advanced</p>
+          <p>HI Hindi - Native speaker</p>
+          <p>EG English - Advanced</p>
         </div>
       </div>
     </section>
