--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         </div>
         <div class="descrition">
           <p>Built a Vehicle Number Plate Detection System, with Deep Learning using YOLO architecture.
-            Improvised by adding web scraper to fetch details of lost or stolen cars from a Police hosted website. Project url: <a>https://github.com/yashyasviagarwal/TcsHumain/blob/master/Vehicle_License_Plate_Detection.ipynb</a>
+            Improvised by adding web scraper to fetch details of lost or stolen cars from a Police hosted website.<br>
+            Project url: <a>https://github.com/yashyasviagarwal/TcsHumain/blob/master/Vehicle_License_Plate_Detection.ipynb</a>
             </p>
         </div>
       </article>
