--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="linker">
         <i class="fa fa-envelope"></i><p>yashyasviagarwal48@gmail.com</p>
         <i class="fab fa-github-alt"></i><p>github.com/yashyasviagarwal</p>
-        <i class="fab fa-linkedin-in"></i><p>yashyasvi-agarwal-18830a171</p>
+        <i class="fab fa-linkedin-in"></i><p>yashyasvi-agarwal</p>
     </div>
     </section>
 </div>
